# scansample

./: CMakeLists.txt  README.md  conanfile.py
Scanner/: CMakeLists.txt
Scanner/include/Scanner/: Scanner.h
Scanner/src/: Scanner.cpp
common/: CMakeLists.txt
common/include/common/: common.h  fs.h
common/src/: common.cpp  fs.cpp
scansample/: CMakeLists.txt  scansample.cpp
